*
* 0.2.3
*

- Implemented basic event correlation
- Windows agent: implemented enum Net.IP.RoutingTable
- Fixed issues: 29


*
* 0.2.2
*

- Implemented communication session encryption
- Added support for multiple database connections for better performance
- Added generation of SYS_NODE_DOWN and SYS_NODE_UP events
- Added possibility to edit server's configuration parameters from
  administrator's console
- Object status calculation algorithm changed
- Fixed incorrect 32 bit integer varbinds parsing in libnxsnmp
- Fixed bug with new interface detection
- Windows console: added simple export of collected DCI data
- Core agent: added configuration option SessionIdleTimeout for automatic
  disconnect of idle or broken sessions
- Fixed issues: 26, 30


*
* 0.2.1
*

- Server startup procedure improved
- Fixed bug in Windows service shutdown code
- Added ICMP ping subagent
- Server will not collect data from unmanaged nodes
- Added PostgreSQL support under Windows
- NetWare platform subagent improved
- Linux subagent: Implemented all Net.Interface.* parameters except
  Net.Interface.Speed
- Fixed crash in Microsoft SQL driver caused by unsuccessful connection
- More SNMP MIBs added
- Fixed issue #27 (poller threads deadlock)
- Server's internal synchronization mechanisms improved
- Added driver for generic GSM modems
- SMS driver can be configured from server configuration wizard
- Windows console:
	- Action properties dialog improved
	- Sorting implemented in data collection editor
	- Object browser window can be saved in desktop configuration
- Windows alarm viewer:
	- Added autologin feature
	- UI appearance improved


*
* 0.2.0
*

- Windows installer improved
- Fixed build issues on various platforms
- Windows console:
	- Items in Control Panel now sorted alphabetically
	- Data collection editor now shows associated template for DCI
	- Added automatic refresh to last values view
	- Rule in policy editor can be enabled/disabled by double click